stable - v0.6 (excel file import improved)

--- a/CertifyMe/appsettings.json
+++ b/CertifyMe/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ImportExcelFileColumnNumberSettings": {
+  "ImportExcelFileSettings": {
     "StartRowNum": 2,
     "NameColNum": 2,
     "SurnameColNum": 3,
