--- a/CertifyMe/appsettings.json
+++ b/CertifyMe/appsettings.json
@@ -15,6 +15,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectiion": "Server=localhost\\SQLEXPRESS;Database=CertifyMeDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnectiion": ""
   }
 }
