--- a/CertifyMe/CertifyMe.csproj
+++ b/CertifyMe/CertifyMe.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="EPPlus" Version="7.7.0" />
     <PackageReference Include="HtmlRendererCore.PdfSharp" Version="1.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
